--- a/package.json
+++ b/package.json
@@ -106,5 +106,9 @@
     "typedoc": "^0.11.0",
     "typescript": "^2.8.3",
     "validate-commit-msg": "^2.12.2"
+  },
+  "dependencies": {
+    "redux": "^4.0.0",
+    "typescript-fsa": "^3.0.0-beta-1"
   }
 }
