--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {},
+  "dependencies": {
+    "typesafe-actions": "^2.0.4"
+  },
   "devDependencies": {
     "ava": "1.0.0-beta.7",
     "codecov": "^3.1.0",
