--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   },
   "dependencies": {
     "redux": "^4.0.1",
+    "redux-observable": "^1.0.0",
+    "rxjs": "^6.3.3",
     "typesafe-actions": "^2.0.4"
   },
   "devDependencies": {
